--- a/src/main/webapp/app/entities/article/articles.html
+++ b/src/main/webapp/app/entities/article/articles.html
@@ -68,19 +68,19 @@
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="article-detail({id:article.id})"
-                                    class="btn btn-info btn-sm">
+                                    class="btn-raised btn btn-info btn-sm" uib-btn-radio="'Left'">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.view"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="article.edit({id:article.id})"
-                                    class="btn btn-primary btn-sm">
+                                    class="btn-raised btn btn-primary btn-sm" uib-btn-radio="'Middle'">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.edit"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="article.delete({id:article.id})"
-                                    class="btn btn-danger btn-sm">
+                                    class="btn-raised btn btn-danger btn-sm" uib-btn-radio="'Right'">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.delete"></span>
                             </button>
