--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -24,7 +24,7 @@
             </p> -->
 
             <ul>
-                <li><a rel="noopener" data-translate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
+                <li><a rel="noopener" data-translate="home.link.stackoverflow">JHipster on Stack Overflw</a></li>
                 <li><a target="_blank" rel="noopener" data-translate="home.link.bugtracker">JHipster bug tracker</a></li>
                 <li><a  target="_blank" rel="noopener" data-translate="home.link.chat">JHipster public chat room</a></li>
                 <li><a  target="_blank" rel="noopener" data-translate="home.link.follow">follow @java_hipster on Twitter</a></li>
