--- a/src/main/webapp/app/statistique/stat_vente.html
+++ b/src/main/webapp/app/statistique/stat_vente.html
@@ -1,22 +1,8 @@
 <div class="container"> 
-           <ul class="nav nav-tabs">
-                <li class="active"><a href="#tab1" data-toggle="tab">Statistique Vente</a></li>
-                <li><a href="tab2" data-toggle="tab">Reception</a></li>
-                <li><a href="#tab3" data-toggle="tab">International</a></li>
-                <li><a href="#tab4" data-toggle="tab">Divers</a></li>
-            </ul>
-                    <div class="tab-content">
-            <div class="tab-pane active" id="tab2">
-            test
-            </div>
-            <div class="tab-pane" id="tab2">
-                <h2>Reception</h2>
-            </div>
-            <div class="tab-pane" id="tab3">
-                <h2>International</h2>
-            </div>
-            <div class="tab-pane" id="tab4">
-                <h2>Divers</h2>
-            </div>
-            </div>
+  <uib-tabset active="activeJustified" justified="true">
+    <uib-tab index="0" heading="Justified">Justified content</uib-tab>
+    <uib-tab index="1" heading="SJ">Short Labeled Justified content</uib-tab>
+    <uib-tab index="2" heading="Long Justified">Long Labeled Justified content</uib-tab>
+  </uib-tabset>
+                  
 </div>
