--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -227,6 +227,13 @@
     <script src="app/entities/decomposition/decomposition.service.js"></script>
     <script src="app/entities/decomposition/decomposition.search.service.js"></script>
     <script src="app/entities/decomposition/decomposition.controller.js"></script>
+    <script src="app/entities/custom-user/custom-user-dialog.controller.js"></script>
+    <script src="app/entities/custom-user/custom-user-detail.controller.js"></script>
+    <script src="app/entities/custom-user/custom-user-delete-dialog.controller.js"></script>
+    <script src="app/entities/custom-user/custom-user.state.js"></script>
+    <script src="app/entities/custom-user/custom-user.service.js"></script>
+    <script src="app/entities/custom-user/custom-user.search.service.js"></script>
+    <script src="app/entities/custom-user/custom-user.controller.js"></script>
     <script src="app/entities/commande/commande-dialog.controller.js"></script>
     <script src="app/entities/commande/commande-detail.controller.js"></script>
     <script src="app/entities/commande/commande-delete-dialog.controller.js"></script>
