--- a/src/main/webapp/app/entities/famille-article/famille-articles.html
+++ b/src/main/webapp/app/entities/famille-article/famille-articles.html
@@ -52,19 +52,19 @@
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="famille-article-detail({id:familleArticle.id})"
-                                    class="btn btn-info btn-sm">
+                                    class="btn-raised btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.view"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="famille-article.edit({id:familleArticle.id})"
-                                    class="btn btn-primary btn-sm">
+                                    class="btn-raised btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.edit"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="famille-article.delete({id:familleArticle.id})"
-                                    class="btn btn-danger btn-sm">
+                                    class=" btn-raised btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.delete"></span>
                             </button>
