--- a/src/main/webapp/app/entities/ligne-sortie-article/ligne-sortie-articles.html
+++ b/src/main/webapp/app/entities/ligne-sortie-article/ligne-sortie-articles.html
@@ -60,7 +60,7 @@
                         <a ui-sref="sortie-article-detail({id:ligneSortieArticle.sortieArticle.id})">{{ligneSortieArticle.sortieArticle.id}}</a>
                     </td>
                     <td>
-                        <a ui-sref="article-detail({id:ligneSortieArticle.article.id})">{{ligneSortieArticle.article.id}}</a>
+                        <a ui-sref="article-detail({id:ligneSortieArticle.article.id})">{{ligneSortieArticle.article.nomarticle}}</a>
                     </td>
                     <td>
                         <a ui-sref="client-detail({id:ligneSortieArticle.client.id})">{{ligneSortieArticle.client.id}}</a>
