--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row">
-       
+
         <div class="col-md-8">
             <h1 data-translate="home.title">Welcome, Gest-c!</h1>
             <p class="lead" data-translate="home.subtitle">This is your homepage</p>
@@ -9,28 +9,40 @@
                 <div class="alert alert-success" ng-switch-when="true" data-translate="home.logged.message" translate-values="{username: '{{vm.account.login}}'}">
                     You are logged in as user "{{vm.account.login}}".
                 </div>
+            </div>
+            <div style="height: 305px">
+                <!--     <div uib-carousel active="actived" interval="myInterval" no-wrap="noWrapSlides">
+                      <div uib-slide ng-repeat="slide in slides">
+                        <img ng-src="content/images/logo.png" style="margin:auto;">
 
-<!--                 <div class="alert alert-warning" ng-switch-when="false" data-translate="global.messages.info.authenticated" translate-compile>
-                    If you want to <a class="alert-link" href="" ng-click="vm.login()">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
+                      </div>
+                    </div>
+                        <img ng-src="content/images/logo.png" style="margin:auto;">-->
+
+                <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+                    <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
+                        <img ng-src="{{slide.image}}" style="margin:auto;">
+                        <div class="carousel-caption">
+                            <h4>Slide {{slide.id}}</h4>
+                            <p>{{slide.text}}</p>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="alert alert-warning" ng-switch-when="false" data-translate="global.messages.info.register" translate-compile>
-                    You don't have an account yet? <a class="alert-link" ui-sref="register">Register a new account</a>
-                </div> -->
             </div>
 
-<!--             <p data-translate="home.question">
-                If you have any question on JHipster:
-            </p> -->
-
-            <ul>
+            <div class="row">
+                <ul>
                 <li><a rel="noopener" data-translate="home.link.stackoverflow">JHipster on Stack Overflw</a></li>
                 <li><a target="_blank" rel="noopener" data-translate="home.link.bugtracker">JHipster bug tracker</a></li>
                 <li><a  target="_blank" rel="noopener" data-translate="home.link.chat">JHipster public chat room</a></li>
                 <li><a  target="_blank" rel="noopener" data-translate="home.link.follow">follow @java_hipster on Twitter</a></li>
             </ul>
+            </div>
         </div>
-         <div class="col-md-4"><div ng-switch="vm.isAuthenticated()">
+        <br><br><br><br>
+
+
+        <div class="col-md-4"><div ng-switch="vm.isAuthenticated()">
  <div class="panel pull-right" ng-switch-when="true">
      <div class="panel-body">
          <ul class="list-inline">
@@ -42,5 +54,5 @@
      </div>
  </div>
         </div>
-    </div></div>
+        </div></div>
 </div>
